filenames = {
    default_app_ts_sources = [
        "default_app/default_app.ts",
        "default_app/main.ts",
        "default_app/preload.ts",
    ]

    default_app_static_sources = [
        "default_app/icon.png",
        "default_app/index.html",
        "default_app/package.json",
        "default_app/styles.css",
    ]

    default_app_octicon_sources = [
        "node_modules/@primer/octicons/build/build.css",
        "node_modules/@primer/octicons/build/svg/book-24.svg",
        "node_modules/@primer/octicons/build/svg/code-square-24.svg",
        "node_modules/@primer/octicons/build/svg/gift-24.svg",
        "node_modules/@primer/octicons/build/svg/mark-github-16.svg",
        "node_modules/@primer/octicons/build/svg/star-fill-24.svg",
    ]

    framework_sources = [
        "shell/app/electron_library_main.h",
        "shell/app/electron_library_main.mm",
    ]

    lib_sources = [
#        "shell/common/electron_command_line.cc",
#        "shell/common/electron_command_line.h",
        "shell/common/application_info.cc",
        "shell/common/application_info.h",
        "shell/app/electron_main_delegate.cc",
        "shell/app/electron_main_delegate.h",
            "shell/common/options_switches.cc",
        "shell/common/options_switches.h",
    ]

    lib_sources_mac = [
        "shell/app/electron_main_delegate_mac.h",
        "shell/app/electron_main_delegate_mac.mm",
        "shell/browser/mac/electron_application.h",
        "shell/browser/mac/electron_application.mm",
        "shell/common/mac/main_application_bundle.h",
        "shell/common/mac/main_application_bundle.mm",
#        "shell/browser/AppDelegate.h",
#        "shell/browser/AppDelegate.m",
    ]
}